--- a/187.html
+++ b/187.html
@@ -1,1 +1,28 @@
-free gzuz
+<html>
+
+ 
+
+<body>
+<h1 style="color: blue;">
+meine erste website
+</h1>
+
+ 
+ 
+
+<p class="text">
+    <button>
+        <a href="https://www.lyricsmagazin.ch/artikel/freegzuz-nach-erneuter-verurteilung-was-bewirken-eigentlich-solche-hashtags">
+        free gzuz
+        </a>
+    
+    </button>
+</p>
+<img src="gzuz.jpg" height= "50%">
+
+
+</body>
+
+ 
+
+</html>
